Update doc generated by CI

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <link rel="stylesheet" href="styles/docfx.vendor.min.css">
       <link rel="stylesheet" href="styles/docfx.css">
       <link rel="stylesheet" href="styles/main.css">
-      <meta property="docfx:navrel" content="toc">
-      <meta property="docfx:tocrel" content="toc">
+      <meta property="docfx:navrel" content="toc.json">
+      <meta property="docfx:tocrel" content="toc.json">
     
     <meta property="docfx:rel" content="">
     
@@ -54,7 +54,8 @@
                       <li>
                           <a href="https://github.com/JeremyAnsel/JeremyAnsel.Media.WavefrontObj" title="Source Code">Source Code</a>
                       </li>
-                </ul>            </div>
+                </ul>
+            </div>
           </div>
         </nav>
 
@@ -87,6 +88,7 @@
 <a href="https://www.nuget.org/packages/JeremyAnsel.Media.WavefrontObj"><img src="https://buildstats.info/nuget/JeremyAnsel.Media.WavefrontObj" alt="NuGet Version"></a>
 <img src="https://img.shields.io/github/license/JeremyAnsel/JeremyAnsel.Media.WavefrontObj" alt="License"></p>
 <p>JeremyAnsel.Media.WavefrontObj is a .Net library to handle Wavefront Obj .obj and .mtl files.</p>
+
 </article>
           </div>
 
@@ -95,12 +97,12 @@
               <div class="contribution">
                 <ul class="nav">
                   <li>
-                    <a href="https://github.com/JeremyAnsel/JeremyAnsel.Media.WavefrontObj/blob/master/JeremyAnsel.Media.WavefrontObj/Documentation/index.md/#L1" class="contribution-link">Improve this Doc</a>
+                    <a href="https://github.com/JeremyAnsel/JeremyAnsel.Media.WavefrontObj/blob/master/JeremyAnsel.Media.WavefrontObj/Documentation/index.md/#L1" class="contribution-link">Edit this page</a>
                   </li>
                 </ul>
               </div>
               <nav class="bs-docs-sidebar hidden-print hidden-xs hidden-sm affix" id="affix">
-                <h5>In This Article</h5>
+                <h5>In this article</h5>
                 <div></div>
               </nav>
             </div>
