Update doc generated by CI

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 <p><a href="https://ci.appveyor.com/project/JeremyAnsel/jeremyansel-media-wavefrontobj/branch/master"><img src="https://ci.appveyor.com/api/projects/status/lepi4cvf6gqjyy9c/branch/master?svg=true" alt="Build status"></a>
 <a href="https://jeremyansel.github.io/JeremyAnsel.Media.WavefrontObj/coverage/"><img src="https://jeremyansel.github.io/JeremyAnsel.Media.WavefrontObj/coverage/badge_combined.svg" alt="Code coverage"></a>
-<a href="https://www.nuget.org/packages/JeremyAnsel.Media.WavefrontObj"><img src="https://buildstats.info/nuget/JeremyAnsel.Media.WavefrontObj" alt="NuGet Version"></a>
+<a href="https://www.nuget.org/packages/JeremyAnsel.Media.WavefrontObj"><img src="https://img.shields.io/nuget/v/JeremyAnsel.Media.WavefrontObj" alt="NuGet Version"></a>
 <img src="https://img.shields.io/github/license/JeremyAnsel/JeremyAnsel.Media.WavefrontObj" alt="License"></p>
 <p>JeremyAnsel.Media.WavefrontObj is a .Net library to handle Wavefront Obj .obj and .mtl files.</p>
 
